--- a/sass/templates/_main.sass
+++ b/sass/templates/_main.sass
@@ -1,5 +1,174 @@
 *, *:before, *:after 
     box-sizing: border-box
 body
-  font-family: sans-serif
-  background-color: red
+  font-family: 'Roboto', sans-serif
+
+.hero
+  background-image: url('../img/header-img.jpg') 
+  padding: 20px 0 0 0
+  &__header
+    width: 1170px
+    display: flex
+    flex-wrap: wrap
+    margin: 0 auto
+    justify-content: space-between
+    align-items: start
+.button
+  border: none
+  cursor: pointer
+  border-radius: 5px
+  color: #fefefe
+.header
+  &__title
+    width: 414px
+    font-size: 30px
+    line-height: 1.2
+    font-weight: 700
+    color: #fefefe
+    text-align: center
+    margin: -2px 0 0 136px
+  &__button
+    width: 270px
+    font-size: 18px
+    font-weight: 700
+    padding: 20px 0 20px 0
+    background-image: linear-gradient(180.0deg, #ffd21f -25%, #e4751c 125%)
+    box-shadow: inset 0px -5px 0px 0px rgba(0,0,0,0.2)
+.main
+  &__img
+    display: block
+    margin: -9px 0px 0 -27px
+  &__wrap
+    
+    display: flex
+    flex-direction: column
+    align-items: center
+    margin-top: 26px
+  &__title
+    text-align: center
+    max-width: 670px
+    line-height: 1.2
+    font-size: 36px
+    font-weight: 700
+    color: #ffd21f
+  &__inderline
+    border-bottom: 2px solid #ffd21f
+  &__text
+    color: #ffffff
+    font-size: 24px
+    font-weight: 400
+    margin: 25px 0 0 0
+.text__decor
+  font-weight: 700 
+.text__decor--inderline
+    border-bottom: 2px solid #ffffff
+.content
+  // display: flex
+  // justify-content: center
+  &__wrap
+    padding: 30px 0 0 0
+    display: flex
+    margin: 0 auto
+    justify-content: space-between
+    max-width: 44%
+    
+    
+  &__form
+    background-color: #ffffff
+    border-radius: 5px 
+    margin: 0 0 0 70px
+     
+  &__info
+    padding: 0 0 0 27px
+.info
+  width: 370px
+  color: #222222
+  font-size: 16px
+  line-height: 1.2
+  font-weight: 400
+  
+  // &__bold
+  //   font-weight: 700
+  &__wrap
+    display: flex
+    width: 367px
+    background-color: #ffd21f
+    align-items: center
+    border-radius: 5px
+    margin: 0 0 15px 0
+    &--top
+      align-items: flex-start
+  &__text
+    background-color: #ffd21f
+    max-width: 300px
+    padding: 0 0 0 15px
+    &--last
+      padding: 17px 0 11px 15px
+.round
+  display: inline-block
+  width: 70px
+  height: 70px
+  border-radius: 50%
+  background: #ffffff
+  color: #ffd21f
+  display: flex
+  justify-content: center
+  align-items: center
+  font-size: 24px
+  font-weight: 700
+  border: 5px solid #ffd21f
+  margin:  0 0 0 -32px
+.form
+  padding: 30px 30px 30px 35px
+  width: 330px
+  &__title 
+    font-size: 20px
+    padding: 0 12px 20px 12px
+    text-align: center
+  &__bold
+    font-weight: 700
+  &__wrap
+    display: flex
+    flex-direction: column
+    width: 270px
+  &__button
+    width: 270px
+    background-image: linear-gradient(180.0deg, #a2d417 -25%, #4c9918 125%)
+    box-shadow: inset 0px -5px 0px 0px rgba(0,0,0,0.2)
+    font-size: 18px
+    line-height: 1.2
+    font-weight: 700
+    padding: 20px
+.input
+  border: 1px solid #d1d1d1
+  border-radius: 5px
+  background: #f7f7f7
+  margin: 0 0 20px 0
+  padding: 17px 0 17px 15px
+  line-height: 1.2
+  &__user
+    background-image: url('../img/user.svg')
+    background-repeat: no-repeat
+    background-position: 233px
+  &__phone
+    background-image: url('../img/phone.svg')
+    background-repeat: no-repeat
+    background-position: 233px
+
+
+    
+    
+      
+
+
+input::placeholder 
+  font-size: 16px
+  font-weight: 400
+  color: #999999
+  
+.text__bold
+  font-weight: 700
+
+
+  
+  
