--- a/css/style.css
+++ b/css/style.css
@@ -351,7 +351,7 @@ body {
   padding: 20px 0 0 0;
 }
 .hero__header {
-  width: 1170px;
+  max-width: 1170px;
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
@@ -364,6 +364,19 @@ body {
   cursor: pointer;
   border-radius: 5px;
   color: #fefefe;
+}
+.button__primary {
+  width: 270px;
+  background-image: linear-gradient(180deg, #a2d417 -25%, #4c9918 125%);
+  box-shadow: inset 0px -5px 0px 0px rgba(0, 0, 0, 0.2);
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: 700;
+  padding: 20px;
+}
+.button__primary--main {
+  margin: 20px 0 0 0;
+  display: none;
 }
 
 .header__title {
@@ -385,8 +398,9 @@ body {
 }
 
 .main__img {
+  width: 100%;
   display: block;
-  margin: -9px 0px 0 -27px;
+  margin: -9px 0px 0 0;
 }
 .main__wrap {
   display: flex;
@@ -425,7 +439,7 @@ body {
   display: flex;
   margin: 0 auto;
   justify-content: space-between;
-  max-width: 44%;
+  width: 44%;
 }
 .content__form {
   background-color: #ffffff;
@@ -496,16 +510,6 @@ body {
   flex-direction: column;
   width: 270px;
 }
-.form__button {
-  width: 270px;
-  background-image: linear-gradient(180deg, #a2d417 -25%, #4c9918 125%);
-  box-shadow: inset 0px -5px 0px 0px rgba(0, 0, 0, 0.2);
-  font-size: 18px;
-  line-height: 1.2;
-  font-weight: 700;
-  padding: 20px;
-}
-
 .input {
   border: 1px solid #d1d1d1;
   border-radius: 5px;
@@ -545,4 +549,87 @@ input::placeholder {
 
 .text__bold {
   font-weight: 700;
+}
+
+@media screen and (max-width: 1420px) {
+  .hero {
+    padding: 10px 20px;
+  }
+  .hero__header {
+    justify-content: space-around;
+  }
+
+  .header__title {
+    margin: 0;
+  }
+
+  .content__wrap {
+    width: 80%;
+    justify-content: center;
+  }
+
+  .main__img {
+    display: none;
+  }
+}
+@media screen and (max-width: 935px) {
+  .header__logo {
+    margin-bottom: 20px;
+  }
+  .header__button {
+    width: 250px;
+    display: none;
+  }
+
+  .button__primary--main {
+    display: block;
+  }
+
+  .main {
+    padding: 0 20px;
+  }
+  .main__text {
+    text-align: center;
+  }
+
+  .content__wrap {
+    width: 90%;
+    flex-wrap: wrap;
+  }
+  .content__form {
+    margin: 0;
+  }
+
+  .info__wrap {
+    max-width: 325px;
+  }
+  .info__text {
+    max-width: 260px;
+  }
+}
+@media screen and (max-width: 370px) {
+  .info__wrap {
+    max-width: 250px;
+  }
+  .info__text {
+    max-width: 210px;
+  }
+
+  .form {
+    width: 285px;
+    padding: 30px 5px 30px 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .form__wrap {
+    align-items: center;
+  }
+
+  .input {
+    width: 250px;
+  }
+  .input__user {
+    background-position: 220px;
+  }
 }
