--- a/sass/templates/_media.sass
+++ b/sass/templates/_media.sass
@@ -1,7 +1,66 @@
-@media screen and ( max-width: 320px  )
+@media screen and ( max-width: 1420px  )
+  .hero
+    padding: 10px 20px
+    &__header
+      // padding: 0 40px
+      justify-content: space-around
+  .header
+    &__title
+      margin: 0
+  .content
+    &__wrap
+      width: 80%
+      justify-content: center
+  .main
+    &__img
+      display: none
 
+@media screen and ( max-width: 935px  )
+  .header
+    &__logo
+      margin-bottom: 20px
+    &__button
+      width: 250px
+      display: none
+  .button
+    &__primary
+      &--main
+        display: block
+  .main
+    padding: 0 20px
+    &__text
+      text-align: center
+  .content
+    &__wrap
+      width: 90%
+      flex-wrap: wrap
+    &__form
+      margin: 0
+  .info
+    &__wrap
+      max-width: 325px
+    &__text
+      max-width: 260px
+
+@media screen and ( max-width: 370px  )
+  .info
+    &__wrap
+      max-width: 250px
+    &__text
+      max-width: 210px
+  .form
+    width: 285px
+    padding: 30px 5px 30px 5px
+    display: flex
+    flex-direction: column
+    align-items: center
+    &__wrap
+      align-items: center
+  .input
+    width: 250px
+    &__user
+      background-position: 220px
       
-  
       
 
     
