--- a/sass/templates/_media.sass
+++ b/sass/templates/_media.sass
@@ -60,6 +60,9 @@
     width: 250px
     &__user
       background-position: 220px
+    &__phone
+      background-position: 220px
+
       
       
 
