--- a/sass/templates/_media.sass
+++ b/sass/templates/_media.sass
@@ -62,6 +62,9 @@
       background-position: 220px
     &__phone
       background-position: 220px
+  .button
+    &__primary
+      width: 250px
 
       
       
